more language clean up

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5589,7 +5589,7 @@ The semantics for minimization selects the models that are minimal
 in the class of all models with the same interpretation for the
 local environment (= fixed non-logical symbols, in the terminology of circumscription).
 
-Formally, if $O' = \syntax{minimize}\ O$, we have
+Formally, if $O' = \syntax{minimize}\ O$, 
 \begin{itemize}
  \item $\Inst(\syntax{minimize}\ O)= \Inst(O)$
  \item $\Sig(\syntax{minimize}\ O) = \Sig(O)$
@@ -5736,7 +5736,7 @@ The semantics of $O =$
 \syntax{filtering OMS Filtering} 
 is
 defined only if  $\Sig(\syntax{Filtering})\subseteq\Sig(\syntax{OMS})$ and $\Th(\syntax{Filtering})\subseteq\Th(\syntax{OMS})$.
-We distinguish two cases based on the value of $c$, 
+\cbs Two cases are distinguished based\cbe on the value of $c$, 
 where $sem(\Gamma, (\Sig(\syntax{OMS}), \Th(\syntax{OMS}), \syntax{Filtering})
 = (c, \cI, \Sigma, \Delta)$ 
 If $c = select$, 
@@ -6329,7 +6329,7 @@ $$sem(\Gamma,  \syntax{intpr-type OMS$_1$ OMS$_2$}) = (L_1, L_2)$$
 The signature of a refinement is a pair consisting of the graph of the
 OMS or network of OMS being refined and the 
 graph of the OMS or network of OMS after refinement. Together with this pair
-we store the mapping along which the refinement is done. 
+\cbs the mapping is stored\cbe along which the refinement is done. 
 Given two networks $G_1$ and $G_2$, a \emph{network morphism} 
 $\sigma : G_1\to G_2$ is a 
 functor $\sigma^G: Shape(G_1)\to Shape(G_2)$ 
@@ -6344,8 +6344,8 @@ such that $\beta_{\Sigma_1}(M_2\forget{\sigma^M_{N_1}}) \in \cM_1$ for each $M_2
 
 A refinement model is a class $\cM$ 
 of pairs of families of models compatible with the two networks. 
-Given a network morphism $\sigma:G_1\to G_2$ and a $G_2$ model $F$, 
-we define $F\forget\sigma$ as the family of models 
+Given a network morphism $\sigma:G_1\to G_2$ and a $G_2$ model $F$,\cbs 
+ $F\forget\sigma$ is defined as the family of models \cbe
 $\{M_i\}_{i\in Nodes(G_1)}$ such that
 $M_i = F_{\sigma^G(i)}\forget{\sigma^M_{i}}$ for each $i\in Nodes(G_1)$.
 
@@ -6396,8 +6396,7 @@ where\\
  such that $G_1$ consists of an isolated node labeled with 
  $(\cI_2, \Sigma_2, \cM_2, \Delta_2)$\\
  $sem(\Gamma,  (\cI_1,\Sigma_1), (\cI_2,\Sigma_2), \syntax{RefMap}) = (\rho_1 = (\Phi, \alpha,\beta):\cI_1\to\cI_2, \sigma_1:\Phi(\Sigma_1)\to\Sigma_2)$,\\
- for each $(M_1, M_2) \in \cM'$
- we have that 
+ for each $(M_1, M_2) \in \cM'$,
 $\beta_{\Sigma_1}(M_1\forget{\sigma_1}) \in \cM_1$,\\
 G consists of an isolated node labeled with $sem^M(\Gamma,  \syntax{OMS})$\\
 $\sigma = (\rho_1,\sigma_1);(\rho_2,\sigma_2)$ and
@@ -6502,8 +6501,8 @@ $$sem(\Gamma,\syntax{network-network-entailment Network$_1$ Network$_2$}) = G$$
 
 \noindent where $sem(\Gamma, \syntax{Network}_1) = G_1$,
 $sem(\Gamma, \syntax{Network}_2) = G_2$, 
-such that $Shape(G_1) = Shape(G_2)$ and for each node $i\in |Shape(G_1)|$
-we have that its names in the networks $G_1$ and $G_2$ are the same,
+such that $Shape(G_1) = Shape(G_2)$ and, for each node $i\in |Shape(G_1)|$,
+its names in the networks $G_1$ and $G_2$ are the same,
 its signatures are the same
 and the class of models obtained by projecting each family of models
 compatible with $G_1$ to the component $i$
@@ -6850,8 +6849,8 @@ e.g. imports, cannot be identified.}.  The OWL 2 Manchester syntax satisfies the
 OWL can be formalized as an institution as follows:
 \begin{definition}\label{DL} \defsty{OWL 2 DL.} 
 \OWL~2~DL is the description logic (DL) based fragment of the web ontology language \OWL. 
-We start with the simple description logic $\ALC$, and then proceed
-to the more complex description logic \SROIQ which is underlying \OWL~2~DL.
+\cbs First, the simple description logic $\ALC$ is discussed, afterward the approach is generalized
+to the more complex description logic \SROIQ{}, which is underlying \OWL~2~DL.\cbe
 Signatures of the description logic $\ALC$ consist of a set  ${\mathcal A}$ of
 atomic concepts, a set ${\mathcal R}$ of roles and a set ${\mathcal
 I}$ of individual constants. Signature morphisms are tuples of
@@ -6888,8 +6887,7 @@ simple roles) compare \cite{SROIQ}.
 \OWL \emph{profiles} are syntactic restrictions of \OWL~2~DL that support specific modeling and reasoning tasks, %\cite{w3c:owl2-profiles}, 
 and which are accordingly based on DLs with appropriate computational properties. Specifically, \OWL~2~\EL is designed for ontologies containing large numbers of concepts or relations, \OWL~2~\QL to support query answering over large amounts of data, and \OWL~2~\RL to support scalable reasoning using rule languages (\EL, \QL, and \RL for short) .
  
-We sketch the logic \ELDL which is underlying the \EL profile.\footnote{To be exact, \EL adds various `harmless' expressive means and syntactic sugar to \ELDL resulting in the DL \ELDL$++$. % \cite{BaaderEtAl-OWLED08DC}; for further details see also \cite{w3c:owl2-profiles}.
-} 
+\cbs The logic \ELDL is underlying the \EL profile. (To be exact, \EL adds various `harmless' expressive means and syntactic sugar to \ELDL resulting in the DL \ELDL$++$.) % \cite{BaaderEtAl-OWLED08DC}; for further details see also \cite{w3c:owl2-profiles}. 
 \ELDL is a syntactic restriction of \ALC to existential restriction, concept
 intersection, and the top concept:
 %\ednote{TM@OK: please be  a bit more precise here, perhaps write some grammar: C ::= ⊤ | A | C ⊓ D | ∃r.C, footnote about added sugar in OWL EL profile} Note that \EL is a very relevant ontology language; large medical ontologies like SNOMED\ednote{CL@TM: FYI, it's SNO not SNOW} CT are epxressed in \EL.\ednote{TM@OK: add RL and QL if there is space}
@@ -6971,8 +6969,8 @@ $h:I_1\to I_2$ is a function $h:\UR_1\to\UR_2$ such that
 \end{itemize}
 
 %For details, see \cite{CommonLogic:oldfashioned}.
-We call the restriction of \CL to sentence
-without sequence markers \CLminus.
+\cbs  \CLminus is the restriction of \CL to sentence\cbe
+without sequence markers.
 \qed\end{definition}
 
 Note that Common Logic also includes sentence formation constructs like
@@ -6990,10 +6988,10 @@ The way of representing RDF Schema ontologies as RDF graphs satisfies the criter
 
 
 \begin{definition}[\RDF and RDF Schema]
-Following \cite{Lucanu}, 
-we define the institutions for the Resource Description
-Framework (\RDF) and \RDF Schema (also known as \RDFS), respectively. 
-These are based on a logic called \emph{bare} \RDF (\SimpleRDF), which consists
+\cbs  
+The institutions for the Resource Description
+Framework (\RDF) and \RDF Schema (also known as \RDFS), respectively, are defined following \cite{Lucanu}. Both \RDF and \RDFS 
+\cbe are based on a logic called \emph{bare} \RDF (\SimpleRDF), which consists
 of triples only (without any predefined resources).
 
 %%%%%%%%%%
@@ -7044,9 +7042,9 @@ such as \texttt{owl:Thing} and \texttt{owl:oneOf}, tailored towards the represen
 
 \infannex{Conformance of UML class and object diagrams with \DOL}\label{a:uml-class}
 
-This informative annex demonstrates conformance of UML class and
-object diagrams with \DOL by defining an institution for both. We
-concentrate on the static aspects of class diagrams; that is, change
+This informative annex demonstrates conformance of\cbs a subset of\cbe UML class and
+object diagrams with \DOL by defining an institution for both. \cbs The subset is restricted to the\cbe
+ static aspects of class diagrams; that is, change
 of state is ignored. This means that all operations are query
 operations.
 
@@ -7056,15 +7054,16 @@ specification and \cite{Seidewitz08}.
 
 \section{Preliminaries}
 
-From the fUML specification, section 10.3.1, we inherit the axioms for
-primitive types: Booleans, numbers, sequences and strings.  These
+\cbs The axioms for primitive types
+are inherited from the fUML specification, section 10.3.1:\cbe
+Booleans, numbers, sequences and strings.  These
 axiomatize (among others) predicates corresponding to primitive types,
 e.g.\ \texttt{buml:Boolean}, \texttt{form:Number},
 \texttt{form:NaturalNumber}, \texttt{buml:Integer},
 \texttt{form:Sequence}, \texttt{form:Character}, and
 \texttt{buml:String}.
 
-We additionally need to axiomatize a number of predicates in Common Logic
+\cbs In the following a number of predicates are axiomatized  in Common Logic\cbe
 (note that enumerations are not axiomatized in fUML):
 \begin{lstlisting}[language=clif,morekeywords={then,with,logic,oms,end},mathescape]
 logic CLIF
@@ -7353,8 +7352,8 @@ end
 
 \end{lstlisting}
 
-Using this infrastructure, we obtain an institution for UML class
-diagrams as described in the following sections.
+\cbs This infrastructure provides a foundation for an institution for UML class
+diagrams, as described in the following sections.\cbe
 
 \section{Signatures}
 
@@ -7374,7 +7373,7 @@ C$;
 %  The set of constants are \uml{EnumerationLiteral}s.  These could be
 %  added like \uml{Property}.}
 and the partial ordering relation $\leq_C$ represents a
-\emph{generalisation relation} on $C$, where we say that $c_1$ is a
+\emph{generalisation relation} on $C$, where $c_1$ is a
 \emph{sub-class/data type} of $c_2$ if $c_1 \leq_C c_2$.
 
 A \emph{class/data type hierarchy map}
@@ -7386,8 +7385,8 @@ $c \in \{ \mathsf{Boolean},\allowbreak \mathsf{UnlimitedNatural},\allowbreak
 \mathsf{Integer}, \mathsf{Real}, \mathsf{String} \}$.
 
 \medskip
-We use the \emph{collection type constructors} $\mathsf{OrderedSet}$,
-$\mathsf{Set}$, $\mathsf{Sequence}$, and $\mathsf{Bag}$ for
+\cbs The \emph{collection type constructors} $\mathsf{OrderedSet}$,
+$\mathsf{Set}$, $\mathsf{Sequence}$, and $\mathsf{Bag}$ are used\cbe for
 representing the meta-attributes ``ordered'' and ``unique'' of
 \uml{MultiplicityElement} according to the following
 table:\footnote{Cf.~UML Superstructure Specification 2.4.1, p.~128; UML
@@ -7410,15 +7409,15 @@ The default is ``not ordered'' and ``unique''.\footnote{UML
 For a class/data type $c \in C$ of a class/data type-hierarchy
 $(C, {\leq_C})$ and a collection type constructor
 $\tau \in \{ \mathsf{OrderedSet}, \mathsf{Set}, \mathsf{Sequence},
-\mathsf{Bag} \}$,
-we write $\tau[c]$ for the induced \emph{collection type}.
+\mathsf{Bag} \}$,\cbs
+ the expression $\tau[c]$ denotes the induced \emph{collection type}.\cbe
 
 \medskip
 Let $(C, {\leq_C})$ be a class/data type hierarchy.
 %
 \begin{itemize}[label={--}, leftmargin=*]
-  \item An \emph{attribute declaration}\footnote{We separate attributes
-  from association member ends due to their different uses.  In UML,
+  \item An \emph{attribute declaration}\footnote{\cbs Attributes
+  and association member ends are distinguished\cbe due to their different uses.  In UML,
   both are of class \uml{Property}.} over $(C, {\leq_C})$ is of the form
 $c.p : \tau[c']$ with $c, c' \in C$, $\tau$ a collection type
 constructor, and $p$ an \emph{attribute name}.
@@ -7435,7 +7434,7 @@ $c_1, \dots, c_r \in C$, $\tau_1, \ldots, \tau_r$ classifier
 annotations, $a$ an \emph{association name}, and $p_1, \dots, p_r$
 \emph{member end names}.\footnote{The member ends are ordered according
   to the UML Superstructure Specification 2.4.1, p.~29; UML 2.5, p.~206;
-  hence we use a tuple-like notation.}  An association declaration
+  hence\cbs they are represented in a\cbe tuple-like notation.}  An association declaration
 $\mathbf{a} = a(p_1 : \tau_1[c_1], \ldots, p_r : \tau_r[c_r])$
 \emph{yields} the \emph{property declarations}
 $\mathbf{a}.p_i : \tau_i[c_i]$ for $1 \leq i \leq r$.  An association
@@ -7461,8 +7460,8 @@ $c_1, c_2 \in C$, $\tau_2$ a collection type constructor, $m$ a
   aggregation kind \uml{composite} can only be member ends of binary
   associations (UML Superstructure Specification 2.4.1, p.~37; UML 2.5,
   p.~228) and their multiplicity must not exceed one (UML Superstructure
-  Specification 2.4.1, p.~126; UML 2.5, p.~155).  We thus separate
-  composition declarations from general association declarations.}  A
+  Specification 2.4.1, p.~126; UML 2.5, p.~155).\cbs  Thus, 
+  composition declarations are  distinguhished from\cbe general association declarations.}  A
 composition declaration
 $\mathbf{m} = m(p_1 : \mathsf{Set}[c_1], \composition p_2 :
 \tau_2[c_2])$
@@ -7495,7 +7494,7 @@ $1 \leq i \neq j \leq r$;\footnote{In UML, member end names need not be
   unique.  However, for (1)~a simpler handling of selecting a particular
   member end in the sentences and avoiding the use of number selectors,
   and (2)~making the notion of member ends ``owned'' by a class/data
-  type, we add this constraint. An association declaration violating this
+  type,\cbs this constraint is added.\cbe An association declaration violating this
   uniqueness constraints can easily be transformed into an association 
   declaration satisfying it by decorating member end names with the
   numbers $1,\ldots,r$.}
@@ -7503,11 +7502,11 @@ $1 \leq i \neq j \leq r$;\footnote{In UML, member end names need not be
   \item the type of a member end\footnote{All member ends are instances
   of \uml{Property}; UML Superstructure Specification 2.4.1, p.~36; UML
   2.5, p.~206.}
-owned by a class/data type coincides with its declarations as attribute:
-We say that a property declaration $\mathbf{a}.p_i : \tau_i[c_i]$
+owned by a class/data type coincides with its declarations as\cbs attribute:
+a property\cbe declaration $\mathbf{a}.p_i : \tau_i[c_i]$
 yielded by a binary association
 $\mathbf{a} = a(p_1 : \tau_1[c_1], p_2 : \tau_2[c_2])$ is \emph{owned
-  by} $c_0 \in C$ if $c_{3-i} \leq_C c_0$ and there is an attribute
+  by} $c_0 \in C$\cbs{},\cbe if $c_{3-i} \leq_C c_0$ and there is an attribute
 declaration $c_0.p_i : \tau_i[c_i] \in P$; and similarly for property
 declarations yielded by composition declarations.  (Note that by the
 uniqueness of attribute names along the generalisation hierarchy only a
@@ -7553,7 +7552,7 @@ morphisms form the category of \emph{class/data type nets}, denoted by
 $\mathrm{Cl}$.
 
 \medskip
-For the example in Fig. \ref{fig:bjoerners_dsl} we have
+\cbs For the example in Fig. \ref{fig:bjoerners_dsl} the class/data type net is\cbe
 %
 \begin{gather*}
   \text{Classes/data types: }\mathsf{Net}, \mathsf{Station}, \mathsf{Line}, \mathsf{Connector}, \mathsf{Unit}, \mathsf{Track}, \mathsf{Point}, \mathsf{Linear},
@@ -7641,8 +7640,8 @@ clause~\ref{terms-and-defs}) of UML class diagrams are obtained
 via a translation to Common Logic.
 
 For a classifier net
-$\Sigma = ((C, {\leq_C}), K, P, M, A)$, we define a Common Logic theory
-$CL(\Sigma)$ consisting of:
+$\Sigma = ((C, {\leq_C}), K, P, M, A)$,\cbs a Common Logic theory
+$CL(\Sigma)$ is defined\cbe consisting of:
 %
 \begin{itemize} % [topsep=0pt, label=--, leftmargin=*]
 \item for $c \in C$, a predicate\footnote{Strictly speaking, this is just a name.} $\CL(c)$,  such that
